# GoIT-WEB-module9

./: README.md  config_example.ini  file_utils.py  logger.py  main.py  pyproject.toml  read_config.py
data/: authors.json
db/: db_connect.py  load_data.py  models.py
quotes/quotes/spiders/: author.py  quote.py
rabbit/: consumer.py  producer.py  rabbit_connect.py
