[tool.poetry]
name = "goit-web-module9"
version = "0.1.0"
description = ""
authors = ["Nataliia Tiutiunnyk <nat.tiutiunnyk.gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.0"
pika = "^1.3.2"
mongoengine = "^0.27.0"
faker = "^22.5.1"
redis = "^5.0.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
